k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-blog-svc
  namespace: hugo-blog
  labels:
    app: hugo-blog
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
  selector:
    app: hugo-blog
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-blog-ingress
  namespace: hugo-blog
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - justinhung.space
    secretName: acme-crt-secret
  rules:
  - host: justinhung.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hugo-blog-svc
            port:
              number: 80
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: hugo-blog-vs
#   namespace: hugo-blog
# spec:
#   gateways:
#     - istio-system/default
#     - mesh
#   hosts:
#     - hugo-blog-svc.hugo-blog.svc.cluster.local
#     - hugo-blog.127-0-0-1.nip.io
#     - hugo-blog.justihung.space
#   http:
#     - route:
#         - destination:
#             host: hugo-blog-svc.hugo-blog.svc.cluster.local
#             port:
#               number: 80
